# lex-au-graph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/lexaugraph/: __init__.py  cli.py  graph.py  loader.py  mcp.py  models.py  resolver.py
tests/: test_graph.py  test_integration.py  test_loader.py  test_mcp.py  test_models.py  test_resolver.py
tests/fixtures/: privacy-act-1988.xml
